adicao das redes sociais

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,3 +30,31 @@ body{
     background: url('../imagens/frame-iphone.png') no-repeat;
 
 }
+
+
+#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 472px;
+} 
+#redes-sociais{
+    text-align: right;
+}
+
+
+#redes-sociais  img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.397);
+    box-sizing: border-box;
+
+}
+#redes-sociais img:hover{
+    border:  2px  solid rgba(255, 255, 255, 0.603);
+    transform: translate(-10px -10px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.616);
+    transition: transform .3s;
+}
